--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "antd": "^4.16.13",
     "graphql": "^15.5.3",
     "jquery": "^3.6.0",
+    "mixitup": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.2",
-    "web-vitals": "^1.0.1",
-    "webpack": "^5.53.0"
+    "react-typical": "^0.1.3",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
