--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
+    "bootstrap": "5.1.0",
     "graphql": "^15.5.3",
     "jquery": "^3.6.0",
     "mixitup": "^3.3.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -25,6 +27,7 @@
     "react-transition-group": "^4.4.2",
     "react-typical": "^0.1.3",
     "slick-carousel": "^1.8.1",
+    "use-react-router-breadcrumbs": "^2.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
